scrape on-click working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
                 </li>
             </ul>
             <span class="navbar-text">
-                <button class="btn btn-outline-success" type="button">Scrape Articles</button>
+                <button class="btn btn-outline-success" type="button" id ="scrapeMe">Scrape Articles</button>
             </span>
             </div>
         </nav>
